fix: sign-in and register form positioning on mobile

--- a/app/assets/stylesheets/styles/user_form.scss
+++ b/app/assets/stylesheets/styles/user_form.scss
@@ -28,6 +28,7 @@
   section.reset-content {
     @include grid-column(12);
     text-align: center;
+    margin-bottom: 2rem;
   }
 }
 
